--- a/app/src/main/res/layout/fragment_view_order.xml
+++ b/app/src/main/res/layout/fragment_view_order.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/text_tools"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_orders"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
