--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -32,7 +32,7 @@
 
         <EditText
             android:id="@+id/edt_phone"
-            android:focusable="false"
+            android:hint="Phone Number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></EditText>
     </com.google.android.material.textfield.TextInputLayout>
